# sandbox

./: .gitignore  .gitmodules  .latexmkrc  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  adau1361_8hpp.html  adau1361_8hpp__incl.map  adau1361_8hpp__incl.md5  adau1361_8hpp_source.html  adau1361lower_8hpp.html  adau1361lower_8hpp__dep__incl.map  adau1361lower_8hpp__dep__incl.md5  adau1361lower_8hpp__incl.map  adau1361lower_8hpp__incl.md5  adau1361lower_8hpp_source.html  annotated.html  blink.c  blink.cpp  classes.html  classrpp__driver_1_1Adau1361.html  classrpp__driver_1_1Adau1361Lower.html  classrpp__driver_1_1Adau1361Lower__coll__graph.map  classrpp__driver_1_1Adau1361Lower__coll__graph.md5  classrpp__driver_1_1Adau1361Lower__inherit__graph.map  classrpp__driver_1_1Adau1361Lower__inherit__graph.md5  classrpp__driver_1_1GpioBasic.html  classrpp__driver_1_1I2cMaster.html  classrpp__driver_1_1I2cMasterInterface.html  classrpp__driver_1_1I2cMasterInterface__inherit__graph.map  classrpp__driver_1_1I2cMasterInterface__inherit__graph.md5  classrpp__driver_1_1I2cMaster__coll__graph.map  classrpp__driver_1_1I2cMaster__inherit__graph.md5  classrpp__driver_1_1I2sSlaveDuplex.html  classrpp__driver_1_1SdkWrapper.html  classrpp__driver_1_1UmbAdau1361Lower.html  classrpp__driver_1_1UmbAdau1361Lower__coll__graph.map  classrpp__driver_1_1UmbAdau1361Lower__coll__graph.md5  (+84 more)
.github/workflows/: coverage.yaml  ctest.yaml  ctest.yml  deploy_pages.yaml
doc/: Doxyfile
script/: convert2pdf  process_of_conversion
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_d.js  namespaces_0.js  (+9 more)
src/: CMakeLists.txt  foo.cpp  foo.hpp  main.cpp
src/codec/: CMakeLists.txt  adau1361.cpp  adau1361.hpp  adau1361lower.cpp  adau1361lower.hpp  umbadau1361lower.cpp  umbadau1361lower.hpp
src/gpio/: CMakeLists.txt  gpiobasic.cpp  gpiobasic.hpp
src/i2c/: CMakeLists.txt  i2cmaster.cpp  i2cmaster.hpp  i2cmasterinterface.hpp
src/i2s/: CMakeLists.txt  i2s_slave_duplex.pio  i2sslaveduplex.cpp  i2sslaveduplex.hpp
src/sdk/: CMakeLists.txt  sdkwrapper.cpp  sdkwrapper.hpp
test/: CMakeLists.txt  test_adau1361.cpp  test_adau1361lower.cpp  test_gpiobasic.cpp  test_i2cmaster.cpp  test_i2sslaveduplex.cpp  test_sdkwrapper.cpp  test_umbadau1361lower.cpp
test/todo/: test_adau1361.md  test_adau1361lower.md  test_duplexslavei2s.md  test_gpiobasic.md  test_i2cmaster.md  test_sdkwrapper.md  test_umbadau1361lower.md
